--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="16dp"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-    <TextView
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/search_edittext"
+                android:inputType="textCapSentences"
+                android:hint="@string/search_hint"
+                android:imeOptions="actionSearch"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/search_button" />
+
+    </LinearLayout>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ProgressBar
+        android:id="@+id/progress_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to Android Volley Tutorial !!\n Choose a menu option."
-        android:layout_marginTop="20dp"
-        android:textAlignment="center"
-        style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Menu"
-        android:textSize="15sp"
-        android:layout_gravity="center"/>
-
-    <Button
-        android:id="@+id/button_get_string"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:visibility="gone" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Get String "/>
-    <Button
-        android:id="@+id/button_get_Json_object"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Get JsonObject "/>
-    <Button
-        android:id="@+id/button_get_Json_array"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Get JsonArray "/>
-    <Button
-        android:id="@+id/button_get_image"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Get Image "/>
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/list_item_movie"
+        android:paddingBottom="28dp" />
+</FrameLayout>
 
 </LinearLayout>
